<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/titleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="LOGIN"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_below="@+id/titleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal = "20dp"
        app:cardElevation="6dp"
        app:cardCornerRadius="@dimen/normal_radius">

        <LinearLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/twNim"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="NIM">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginNim"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/twPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:hint="Password">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

<RelativeLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/white"
    android:padding="20dp"
    android:gravity="center">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/choco"/>
</RelativeLayout>
</RelativeLayout>